testing repair